--- a/mainpagelooks.css
+++ b/mainpagelooks.css
@@ -1,3 +1,11 @@
 body {
     background-color: aliceblue;
 }
+h1 {
+    color: black;
+    text-align: center;
+}
+p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+}
